# lldap

./: .coderabbit.yml  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build-amd64.sh  build-arm64.sh  docker-entrypoint-rootless.sh  docker-entrypoint.sh  export_schema.sh  flake.nix  generate_secrets.sh  lldap_config.docker_template.toml  lldap_config.toml  prepare-release.sh  schema.graphql  test_password_service.rs
app/: Cargo.toml  build.sh  index.html  index_local.html  main.js  schema.graphql  style.css
app/queries/: create_group.graphql  create_group_attribute.graphql  create_user.graphql  create_user_attribute.graphql  delete_group_attribute.graphql  delete_user.graphql  delete_user_attribute.graphql  get_group_attributes_schema.graphql  get_group_details.graphql  get_group_list.graphql  get_user_attributes_schema.graphql  get_user_avatar.graphql  get_user_details.graphql  list_users.graphql  remove_user_from_group.graphql  set_user_login_enabled.graphql  update_group.graphql  update_user.graphql
app/src/: api.rs  app.rs  cookies.rs  create_user.rs  graphql_api.rs  lib.rs  login.rs  logout.rs  user_details.rs  user_table.rs
app/src/components/: add_group_member.rs  add_user_to_group.rs  app.rs  avatar.rs  avatar_cache.rs  avatar_event_bus.rs  banner.rs  change_password.rs  create_group.rs  create_group_attribute.rs  create_user.rs  create_user_attribute.rs  delete_group.rs  delete_group_attribute.rs  delete_user.rs  delete_user_attribute.rs  group_attributes_form.rs  group_details.rs  group_details_form.rs  group_schema_table.rs  group_table.rs  login.rs  logout.rs  mod.rs  password_field.rs  remove_user_from_group.rs  reset_password_step1.rs  reset_password_step2.rs  router.rs  select.rs  user_attributes_table.rs  user_details.rs  user_details_form.rs  user_schema_table.rs  user_table.rs
app/src/components/form/: attribute_input.rs  checkbox.rs  date_input.rs  field.rs  file_input.rs  mod.rs  select.rs  static_value.rs  submit.rs
app/src/components/fragments/: attribute_schema.rs  mod.rs
app/src/infra/: api.rs  attributes.rs  common_component.rs  cookies.rs  form_utils.rs  functional.rs  graphql.rs  mod.rs  modal.rs  opaque_legacy.rs  opaque_v07.rs  schema.rs  tooltip.rs
app/static/: fonts.css  libraries.txt  main.js  style.css
app/static/fonts/: fonts.txt
auth/: Cargo.toml
auth/src/: lib.rs  opaque.rs
crates/auth/: Cargo.toml
crates/auth/src/: access_control.rs  lib.rs  opaque.rs  v07.rs
crates/domain/: Cargo.toml
crates/domain-handlers/: Cargo.toml
crates/domain-handlers/src/: handler.rs
crates/domain-model/: Cargo.toml
crates/domain-model/src/: error.rs  lib.rs
crates/domain-model/src/model/: deserialize.rs  group_attributes.rs  groups.rs  jwt_refresh_storage.rs  jwt_storage.rs  memberships.rs  mod.rs  plugin_key_values.rs  prelude.rs  user_attribute_schema.rs  users.rs
crates/domain/src/: access_control.rs  deserialize.rs  lib.rs  public_schema.rs  requests.rs  schema.rs  types.rs
crates/frontend-options/: Cargo.toml
crates/frontend-options/src/: lib.rs
crates/graphql-server/: Cargo.toml
crates/graphql-server/src/: api.rs  lib.rs  mutation.rs  query.rs
crates/graphql-server/src/mutation/: helpers.rs  inputs.rs  mod.rs
crates/graphql-server/src/query/: attribute.rs  filters.rs  group.rs  mod.rs  schema.rs  user.rs
crates/key-value-store/: Cargo.toml
crates/key-value-store/src/api/: error.rs  store.rs
crates/ldap/: Cargo.toml
crates/ldap/src/: compare.rs  create.rs  delete.rs  handler.rs  lib.rs  modify.rs  password.rs  search.rs  search.rs.bak
crates/ldap/src/core/: error.rs  group.rs  user.rs  utils.rs
crates/opaque-handler/: Cargo.toml
crates/opaque-handler/src/: lib.rs
crates/plugin-engine/: Cargo.toml
crates/plugin-engine/src/: lib.rs
crates/plugin-engine/src/api/: backend.rs  handler.rs  mod.rs  types.rs
crates/plugin-engine/src/internal/: exec.rs  handler.rs  mod.rs  plugins.rs
crates/plugin-engine/src/tests/: exec_utils.rs  lua_scripts.rs  memory_store.rs  mock_backend.rs  mod.rs  tests.rs
crates/plugin-kv-store/: Cargo.toml
crates/plugin-kv-store/src/: lib.rs  migration.rs  store.rs  test.rs
crates/sql-backend-handler/: Cargo.toml
crates/sql-backend-handler/src/: lib.rs  logging.rs  password_service.rs  sql_backend_handler.rs  sql_group_backend_handler.rs  sql_migrations.rs  sql_opaque_handler.rs  sql_schema_backend_handler.rs  sql_tables.rs  sql_user_backend_handler.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
migration-tool/: Cargo.toml
migration-tool/queries/: create_group.graphql  create_user.graphql
migration-tool/src/: ldap.rs  lldap.rs  main.rs
model/: Cargo.toml
model/src/: lib.rs  opaque.rs
server/: Cargo.toml
server/src/: auth_service.rs  cli.rs  configuration.rs  database_string.rs  graphql_server.rs  healthcheck.rs  jwt_sql_tables.rs  ldap_server.rs  logging.rs  mail.rs  main.rs  mod.rs  session_aware_backend_handler.rs  sql_tcp_backend_handler.rs  tcp_backend_handler.rs  tcp_server.rs  tls.rs
server/src/domain/: deserialize.rs  error.rs  handler.rs  mod.rs  opaque_handler.rs  plugin_backend_handler.rs  schema.rs  sql_backend_handler.rs  sql_group_backend_handler.rs  sql_migrations.rs  sql_opaque_handler.rs  sql_schema_backend_handler.rs  sql_tables.rs  sql_user_backend_handler.rs  types.rs
server/src/domain/ldap/: group.rs  (+3 more)
server/src/infra/: access_control.rs  auth_service.rs  cli.rs  configuration.rs  database_string.rs  db_cleaner.rs  graphql_server.rs  healthcheck.rs  jwt_sql_tables.rs  ldap_handler.rs  ldap_server.rs  logging.rs  mail.rs  mod.rs  schema.rs  sql_backend_handler.rs  tcp_backend_handler.rs  tcp_server.rs  test_utils.rs
server/tests/: graphql.rs  integrations.rs  ldap.rs
server/tests/common/: auth.rs  env.rs  fixture.rs  graphql.rs  mod.rs
server/tests/queries/: add_user_to_group.graphql  delete_group.graphql  get_user_details.graphql  list_groups.graphql  list_users.graphql
set-password/: Cargo.toml
set-password/src/: main.rs
(+271 files in other folders)
