[workspace]
members = [
    "crates/auth",
    "crates/domain",
    "crates/domain-model",
    "crates/domain-handlers",
    "crates/frontend-options",
    "crates/validation",
    "server",
    "app",
    "migration-tool",
    "set-password",
]

default-members = ["server"]

resolver = "2"

[profile.release]
lto = true

[profile.release.package.lldap_app]
opt-level = 's'

[patch.crates-io.lber]
git = 'https://github.com/inejge/ldap3/'

[workspace.dependencies.sea-orm]
version = "1.1.8"
default-features = false

[workspace.dependencies.serde]
version = "1"
