[workspace]
members = [
    "server",
    "app",
    "migration-tool",
    "set-password",
    "crates/*",
]
default-members = ["server"]
resolver = "2"

[workspace.package]
authors = ["Valentin Tolmer <valentin@tolmer.fr>"]
documentation = "https://github.com/lldap/lldap"
edition = "2024"
homepage = "https://github.com/lldap/lldap"
license = "GPL-3.0-only"
repository = "https://github.com/lldap/lldap"
rust-version = "1.89.0"

[profile.release]
lto = true

[profile.release.package.lldap_app]
opt-level = 's'

[patch.crates-io.lber]
git = 'https://github.com/inejge/ldap3/'

[workspace.dependencies.sea-orm]
version = "1.1.8"
default-features = false

[workspace.dependencies.serde]
version = "1"
