[package]
name = "lldap_app"
version = "0.6.2"
description = "Frontend for LLDAP"
edition.workspace = true
include = ["src/**/*", "queries/**/*", "Cargo.toml", "../schema.graphql"]
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.13"
gloo-console = "0.2.3"
gloo-file = "0.2.3"
gloo-net = "*"
graphql_client = "0.10"
http = "0.2"
jwt = "0.13"
rand = "0.8"
serde_json = "1"
url-escape = "0.1.1"
validator = "0.14"
validator_derive = "0.14"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "*"
yew = "0.19.3"
yew-router = "0.16"

# Needed because of https://github.com/tkaitchuck/aHash/issues/95
indexmap = "=1.6.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "FileReader",
  "FormData",
  "HtmlDocument",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlOptionElement",
  "HtmlOptionsCollection",
  "HtmlSelectElement",
  "SubmitEvent",
  "console",
]

[dependencies.chrono]
version = "*"
features = [
  "wasmbind"
]

[dependencies.derive_more]
features = ["debug", "display", "from", "from_str"]
default-features = false
version = "1"

[dependencies.lldap_auth]
path = "../crates/auth"
features = [ "opaque_client" ]

# --- Legacy opaque-ke 0.7 deps (PROGRESSIVE MIGRATION SHIM) ----------------
#
# These aliased dependencies (`*-legacy`) exist solely so the WASM client can
# generate and verify OPAQUE v0.7 protocol messages when the server reports a
# legacy password via HTTP 409 on `/auth/opaque/login/start`. They are NOT
# permanent.
#
# Removal conditions (whichever comes first):
#   1. After two stable LLDAP releases following the upgrade (i.e. drop in
#      v0.7.x or later) AND a startup-time deprecation warning has been live
#      for at least one release. By that point, any user who logs in even
#      once will have had their password re-registered in the v4.0 format.
#   2. The next major version bump (v1.0), at which point the migration is
#      considered complete and the v0.7 path is unconditionally removed.
#
# When removing, also delete:
#   - `app/src/infra/opaque_legacy.rs`
#   - The legacy login HTTP endpoints (`/auth/opaque/v0/login/{start,finish}`)
#     in `server/src/auth_service.rs`
#   - The `legacy` module + dual-path logic in
#     `crates/sql-backend-handler/src/sql_opaque_handler.rs`
#   - The `legacy_server_key_bytes` field on `SqlBackendHandler` and the
#     corresponding loading code in `server/src/configuration.rs`
#   - The `password_version == 0` branch in `bind()` and `login_start()`
#   - These Cargo deps and their counterparts in
#     `crates/sql-backend-handler/Cargo.toml`
#
# Tracked in CHANGELOG.md under [Unreleased]; add a "## Removed" entry when
# this cleanup happens.
# ---------------------------------------------------------------------------
[dependencies.opaque-ke-legacy]
package = "opaque-ke"
version = "0.7"

[dependencies.curve25519-dalek-legacy]
package = "curve25519-dalek"
version = "3"

[dependencies.sha2-legacy]
package = "sha2"
version = "0.9"

[dependencies.digest-legacy]
package = "digest"
version = "0.9"

[dependencies.rust-argon2]
version = "2"

[dependencies.generic-array]
version = "0.14"

[dependencies.lldap_frontend_options]
path = "../crates/frontend-options"

[dependencies.lldap_validation]
path = "../crates/validation"

[dependencies.image]
features = ["jpeg"]
default-features = false
version = "0.24"

[dependencies.serde]
workspace = true

[dependencies.strum]
features = ["derive"]
version = "0.25"

[dependencies.yew_form]
git = "https://github.com/jfbilodeau/yew_form"
rev = "4b9fabffb63393ec7626a4477fd36de12a07fac9"

[dependencies.yew_form_derive]
git = "https://github.com/jfbilodeau/yew_form"
rev = "4b9fabffb63393ec7626a4477fd36de12a07fac9"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['--enable-bulk-memory']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-bulk-memory']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-bulk-memory']
