[package]
name = "lldap_auth"
version = "0.2.0"
authors = ["Valentin Tolmer <valentin@tolmer.fr>", "Steve Barrau <steve.barrau@gmail.com>", "Thomas Wickham <mackwic@gmail.com>"]
edition = "2021"

[features]
default = ["opaque_server", "opaque_client"]
opaque_server = []
opaque_client = []
js = []

[dependencies]
rust-argon2 = "0.8"
curve25519-dalek = "3"
digest = "*"
generic-array = "*"
rand = "0.8"
serde = "*"
sha2 = "0.9"
thiserror = "*"

[dependencies.opaque-ke]
version = "0.6"

[dependencies.chrono]
version = "*"
features = [ "serde" ]

# For WASM targets, use the JS getrandom.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
