[package]
name = "lldap_migration_tool"
version = "0.4.2"
description = "CLI migration tool to go from OpenLDAP to LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "*"
base64 = "0.13"
rand = "0.8"
requestty = "0.4.1"
serde_json = "1"
smallvec = "*"

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_client"]

[dependencies.graphql_client]
features = ["graphql_query_derive", "reqwest-rustls"]
default-features = false
version = "0.11"

[dependencies.reqwest]
version = "*"
default-features = false
features = ["json", "blocking", "rustls-tls"]

[dependencies.ldap3]
version = "*"
default-features = false
features = ["sync", "tls-rustls"]

[dependencies.serde]
workspace = true
