[package]
name = "lldap_migration_tool"
version = "0.4.2"
description = "CLI migration tool to go from OpenLDAP to LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
ldap3 = { workspace = true }
rand = { workspace = true }
requestty = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = "1"

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_client"]

[dependencies.graphql_client]
workspace = true
features = ["graphql_query_derive", "reqwest-rustls"]

[dependencies.reqwest]
workspace = true
default-features = false
features = ["json", "blocking", "rustls-tls"]
