[package]
name = "lldap_model"
version = "0.1.0"
authors = ["Valentin Tolmer <valentin@tolmer.fr>", "Steve Barrau <steve.barrau@gmail.com>", "Thomas Wickham <mackwic@gmail.com>"]
edition = "2018"

[features]
js = []

[dependencies]
serde = "*"

[dependencies.chrono]
version = "*"
features = [ "serde" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sqlx]
version = "0.5"
features = [
  "any",
  "chrono",
  "macros",
  "mysql",
  "postgres",
  "runtime-actix-native-tls",
  "sqlite",
]
