[package]
name = "lldap_model"
version = "0.1.0"
authors = ["Valentin Tolmer <valentin@tolmer.fr>", "Steve Barrau <steve.barrau@gmail.com>", "Thomas Wickham <mackwic@gmail.com>"]
edition = "2018"

[features]
default = ["opaque_server", "opaque_client"]
opaque_server = []
opaque_client = []
js = []

[dependencies]
rust-argon2 = "0.8"
curve25519-dalek = "3"
digest = "*"
generic-array = "*"
rand = "0.8"
serde = "*"
sha2 = "0.9"
thiserror = "*"

# TODO: update to 0.6 when out.
[dependencies.opaque-ke]
git = "https://github.com/novifinancial/opaque-ke"
rev = "98f1821897cd2800e5bffb2a70541056145e99cc"

[dependencies.chrono]
version = "*"
features = [ "serde" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sqlx]
version = "0.5"
features = [
  "any",
  "chrono",
  "macros",
  "mysql",
  "postgres",
  "runtime-actix-native-tls",
  "sqlite",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sqlx-core]
version = "=0.5.1"

# For WASM targets, use the JS getrandom.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
