[package]
name = "lldap"
version = "0.6.2"
description = "Super-simple and lightweight LDAP server"
categories = ["authentication", "command-line-utilities"]
edition.workspace = true
keywords = ["cli", "ldap", "graphql", "server", "authentication"]
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-http = "3"
actix-rt = "2"
actix-server = "2"
actix-service = "2"
actix-web-httpauth = "0.8"
anyhow = "*"
async-trait = "0.1"
bincode = "1.3"
cron = "*"
derive_builder = "0.12"
figment_file_provider_adapter = "0.1"
futures = "*"
futures-util = "*"
hmac = "0.12"
http = "*"
juniper = "0.15"
jwt = "0.16"
ldap3_proto = "0.6.0"
log = "*"
rand_chacha = "0.3"
rustls-pemfile = "2"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = "0.3"
tokio-rustls = "0.26"
tokio-stream = "*"
tokio-util = "0.7"
tracing = "*"
tracing-actix-web = "0.7"
tracing-attributes = "^0.1.21"
tracing-log = "*"
urlencoding = "2"
webpki-roots = "0.26"

[dependencies.actix-web]
features = ["rustls-0_23"]
version = "4.12.1"

[dependencies.rustls]
features = ["ring", "logging", "std"]
version = "0.23"

[dependencies.rustls-pki-types]
features = ["std"]
version = "1"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.clap]
features = ["std", "color", "suggestions", "derive", "env"]
version = "4"

[dependencies.derive_more]
features = ["debug", "display", "from", "from_str"]
default-features = false
version = "1"

[dependencies.figment]
features = ["env", "toml"]
version = "*"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "tracing-log"]

[dependencies.lettre]
features = ["builder", "serde", "smtp-transport", "tokio1-rustls-tls"]
default-features = false
version = "0.10.1"

[dependencies.lldap_access_control]
path = "../crates/access-control"

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_domain]
path = "../crates/domain"

[dev-dependencies.lldap_domain]
path = "../crates/domain"
features = ["test"]

[dependencies.lldap_domain_model]
path = "../crates/domain-model"

[dependencies.lldap_domain_handlers]
path = "../crates/domain-handlers"

[dependencies.lldap_frontend_options]
path = "../crates/frontend-options"

[dependencies.lldap_graphql_server]
path = "../crates/graphql-server"

[dependencies.lldap_ldap]
path = "../crates/ldap"

[dependencies.lldap_sql_backend_handler]
path = "../crates/sql-backend-handler"

[dependencies.lldap_opaque_handler]
path = "../crates/opaque-handler"

[dependencies.lldap_validation]
path = "../crates/validation"

[dependencies.opaque-ke]
version = "0.7"

[dependencies.rand]
features = ["small_rng", "getrandom"]
version = "0.8"

[dependencies.secstr]
features = ["serde"]
version = "*"

[dependencies.serde]
workspace = true

[dependencies.strum]
features = ["derive"]
version = "0.25"

[dependencies.tokio]
features = ["full"]
version = "1.25"

[dependencies.uuid]
features = ["v1", "v3", "v4"]
version = "1"

[dependencies.tracing-forest]
features = ["smallvec", "chrono", "tokio"]
version = "^0.1.6"

[dependencies.actix-tls]
features = ["default", "rustls"]
version = "3"

[dependencies.sea-orm]
workspace = true
features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "sqlx-all",
    "runtime-actix-rustls",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.url]
version = "2"
features = ["serde"]

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.11.4"
nix = "0.26.2"
pretty_assertions = "1"

[dev-dependencies.graphql_client]
features = ["graphql_query_derive", "reqwest-rustls"]
default-features = false
version = "0.11"

[dev-dependencies.ldap3]
version = "*"
default-features = false
features = ["sync", "tls-rustls-ring"]

[dev-dependencies.lldap_auth]
path = "../crates/auth"
features = ["test"]

[dev-dependencies.lldap_opaque_handler]
path = "../crates/opaque-handler"
features = ["test"]

[dev-dependencies.lldap_test_utils]
path = "../crates/test-utils"

[dev-dependencies.lldap_sql_backend_handler]
path = "../crates/sql-backend-handler"
features = ["test"]

[dev-dependencies.reqwest]
version = "*"
default-features = false
features = ["json", "blocking", "rustls-tls"]

[dev-dependencies.serial_test]
version = "2.0.0"
default-features = false
features = ["file_locks"]

[dev-dependencies.uuid]
version = "1"
features = ["v4"]

[dev-dependencies.figment]
features = ["test"]
version = "*"
