[package]
authors = ["Valentin Tolmer <valentin@tolmer.fr>"]
description = "CLI tool to set a user password in LLDAP"
edition = "2021"
homepage = "https://github.com/lldap/lldap"
license = "GPL-3.0-only"
name = "lldap_set_password"
repository = "https://github.com/lldap/lldap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
rand = "0.8"
serde = "1"
serde_json = "1"

[dependencies.clap]
features = ["std", "color", "suggestions", "derive", "env"]
version = "4"

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_client"]

[dependencies.reqwest]
version = "*"
default-features = false
features = ["json", "blocking", "rustls-tls"]
