[package]
name = "lldap_set_password"
version = "0.1.0"
description = "CLI tool to set a user password in LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
rand = "0.8"
serde_json = "1"

[dependencies.clap]
features = ["std", "color", "suggestions", "derive", "env"]
version = "4"

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_client"]

[dependencies.reqwest]
version = "*"
default-features = false
features = ["json", "blocking", "rustls-tls", "rustls-tls-native-roots"]

[dependencies.serde]
workspace = true

[dependencies.lldap_frontend_options]
path = "../crates/frontend-options"
