[package]
name = "lldap_auth"
version = "0.6.0"
description = "Authentication protocol for LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["opaque_server", "opaque_client"]
opaque_server = []
opaque_client = []
js = []
sea_orm = ["dep:sea-orm"]
test = []

[dependencies]
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1.18.1", features = ["serde"] }

[dependencies.derive_more]
features = ["debug", "display"]
default-features = false
version = "1"

[dependencies.opaque-ke]
version = "4"
features = ["argon2"]

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.sea-orm]
workspace = true
features = ["macros"]
optional = true

[dependencies.serde]
workspace = true

# opaque-ke 0.7 for backward-compatible validation of existing password files.
# Only used for progressive migration — new passwords always use opaque-ke 4.
[dependencies.opaque-ke-v07]
package = "opaque-ke"
version = "0.7"

[dependencies.curve25519-dalek-v07]
package = "curve25519-dalek"
version = "3"

[dependencies.sha2-v07]
package = "sha2"
version = "0.9"

[dependencies.digest-v07]
package = "digest"
version = "0.9"

[dependencies.rust-argon2-v07]
package = "rust-argon2"
version = "2"

[dependencies.generic-array]
version = "0.14"

# For WASM targets, use the JS getrandom.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.getrandom]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
